Fixed overlap issues with bottom box

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  overflow: scroll;
 }
 
 .top-box {
@@ -90,6 +91,7 @@ a {
   width: 100%;
   height: 500px;
   align-items: center;
+  position: relative;
 }
 
 .middle-box > h1 {
@@ -208,6 +210,7 @@ a {
   height: 200px;
   margin-left: 200px;
   color: white;
+  position: absolute;
 }
 
 .inside-box-left > h1 {
@@ -223,7 +226,7 @@ a {
   justify-content: flex-end;
   align-items: center;
   margin-right: 200px;
-  margin-top: -120px;
+  margin-top: 75px;
 }
 
 .copyright-box {
